[build-system]
requires = [
  "setuptools>=42",
  "scikit-build>=0.13",
  "cmake>=3.18",
  "ninja",
  "torch",
  "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "dgl"
version = "2.4.0"
dependencies = [
  "networkx>=2.1",
  "numpy>=1.14.0",
  "packaging>=24.2",
  "pandas>=2.2.3",
  "psutil>=5.8.0",
  "pydantic>=2.0",
  "pyyaml>=6.0.2",
  "requests>=2.19.0",
  "scipy>=1.1.0",
  "tqdm>=4.67.1",
  "torch>=2.5.1",
]
requires-python = ">= 3.12"

[tool.black]
line-length = 80

[tool.setuptools.packages.find]
where = ["python"]
